--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "install": "(cd LHD_Registration/cordova && yarn install) && (cd LHD_Registration/react-js && yarn install)",
+    "install": "(cd LHD_Registration/cordova && npm install) && (cd LHD_Registration/react-js && npm install)",
     "start": "cd LHD_Registration && reco start"
   }
 }
