Fetching categories and creating teams correctly

--- a/LHD_Register/package.json
+++ b/LHD_Register/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "reco start",
