--- a/LHD_Register/react-js/package.json
+++ b/LHD_Register/react-js/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
     "react.cordova-navigation_controller": "^1.6.4",
+    "sweetalert": "^2.1.2",
     "tailwindcss": "^1.1.4"
   },
   "scripts": {
