--- a/LHD_Register/react-js/package.json
+++ b/LHD_Register/react-js/package.json
@@ -8,6 +8,7 @@
     "customize-cra": "^0.9.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "mdbreact": "^4.23.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
